--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </section>
     
         <section>
-            <div class="pointer"></div>
+            <div class="turn-indicator"></div>
         </section>
     
         <section class="game">
